@@ -2,6 +2,7 @@ gscan2pdf (2.0.2-1) unstable; urgency=low
 
   * New upstream release
     Closes: #893024 (Manual entry into UI date widget is broken)
+    Closes: #893025 (White UI background makes page borders disappear)
 
  -- Jeffrey Ratcliffe <jjr@debian.org>
 
