@@ -4,6 +4,8 @@
 * Change boolean scan options to use switch instead of checkbox widget
 * Fixed manually typing date in metadata dialog. Closes Debian bug #893024
   (Manual entry into UI date widget is broken)
+* Take colours for image viewer from theme. Closes Debian bug #893025
+  (White UI background makes page borders disappear)
 
 
 2.0.1 (12.03.2018):
